add_filters_for_receiving_cash
