# docs/swagger.json
@@ -44,6 +44,18 @@
                         "description": "Filter by immobile",
                         "name": "isImmobile",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by withdrawal",
+                        "name": "isWithdrawal",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by replenishment",
+                        "name": "isReplenishment",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -134,6 +146,18 @@
                         "type": "boolean",
                         "description": "Filter by open",
                         "name": "isOpen",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by withdrawal",
+                        "name": "isWithdrawal",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by replenishment",
+                        "name": "isReplenishment",
                         "in": "query"
                     }
                 ],
@@ -292,6 +316,74 @@
                 }
             }
         },
+        "models.Office": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "distance": {
+                    "type": "integer"
+                },
+                "hasRamp": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "kep": {
+                    "type": "boolean"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
+                },
+                "metroStation": {
+                    "type": "string"
+                },
+                "myBranch": {
+                    "type": "boolean"
+                },
+                "officeType": {
+                    "type": "string"
+                },
+                "openHours": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Hours"
+                    }
+                },
+                "openHoursIndividual": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Hours"
+                    }
+                },
+                "replenishment": {
+                    "type": "boolean"
+                },
+                "rko": {
+                    "type": "string"
+                },
+                "salePointFormat": {
+                    "type": "string"
+                },
+                "salePointName": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "suoAvailability": {
+                    "type": "string"
+                },
+                "withdrawal": {
+                    "type": "boolean"
+                }
+            }
+        },
         "models.Service": {
             "type": "object",
             "properties": {
@@ -335,11 +427,14 @@
         "models.Ticket": {
             "type": "object",
             "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
-                "officeId": {
-                    "type": "integer"
+                "office": {
+                    "$ref": "#/definitions/models.Office"
                 },
                 "userId": {
                     "type": "integer"
@@ -367,8 +462,14 @@
                 "radius_distance": {
                     "type": "number"
                 },
+                "replenishment": {
+                    "type": "boolean"
+                },
                 "services": {
                     "$ref": "#/definitions/models.Services"
+                },
+                "withdrawal": {
+                    "type": "boolean"
                 }
             }
         },
@@ -420,6 +521,9 @@
                 "radius_distance": {
                     "type": "number"
                 },
+                "replenishment": {
+                    "type": "boolean"
+                },
                 "rko": {
                     "type": "string"
                 },
@@ -434,6 +538,9 @@
                 },
                 "suoAvailability": {
                     "type": "string"
+                },
+                "withdrawal": {
+                    "type": "boolean"
                 }
             }
         },
