# internal/app/handlers/officesWithinRadius.go
@@ -23,6 +23,8 @@ import (
 // @Param isIndividualPerson query bool false "Filter by individual person"
 // @Param isPrime query bool false "Filter by prime"
 // @Param isOpen query bool false "Filter by open"
+// @Param isWithdrawal query bool false "Filter by withdrawal"
+// @Param isReplenishment query bool false "Filter by replenishment"
 // @Success 200 {object} support_models.OfficesWithRadius
 // @Failure	400	{object} utils.HttpError
 // @Failure	500	{object} utils.HttpError
@@ -43,6 +45,8 @@ func (h handler) GetOfficesWithinRadius(c *gin.Context) {
 		filters.FilterOfficesByImmobile(c.Query("isImmobile")),
 		filters.FilterOfficesByPrime(c.Query("isPrime")),
 		filters.FilterOfficesByOpen(c.Query("isOpen"), c.Query("isLegalPerson")),
+		filters.FilterOfficesByWithdrawal(c.Query("isWithdrawal")),
+		filters.FilterOfficesByReplenishment(c.Query("isReplenishment")),
 	}
 
 	if err := officesWithDistance.GetWithinRadius(h.DB, &ga, &f); err != nil {
