# internal/app/models/ticket.go
@@ -7,9 +7,10 @@ import (
 
 type Ticket struct {
 	ID        uint           `gorm:"primarykey" json:"id"`
-	CreatedAt time.Time      `json:"-"`
+	CreatedAt time.Time      `json:"createdAt"`
 	UpdatedAt time.Time      `json:"-"`
 	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`
-	OfficeId  int64          `json:"officeId"`
-	UserId    int64          `json:"userId"`
+	OfficeId  uint           `json:"-"`
+	Office    Office         `json:"office"`
+	UserId    uint           `json:"userId"`
 }
